--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -288,6 +288,8 @@
                                     headers: { "Content-Type": "application/json" },
                                     body: JSON.stringify(data),
                                 });
+                                closeModal();
+                                window.location.href = "/user-orders/" + userID;
                             });
                         })
                         .catch(err => {
