--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -280,7 +280,10 @@
                         .then(matched => {
                             confirmPaymentBtn.addEventListener('click', async () => {
                                 while (matched.length === 0) {
-                                    const res = await fetch("/get-webhooks");
+                                    const res = await fetch("/get-webhooks", {
+                                        method: "POST",
+                                        headers: { "Content-Type": "application/json" },
+                                    });
                                     const webhooks = await res.json();
 
                                     matched = webhooks.filter(w =>
