--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -215,7 +215,20 @@
             document.getElementById("subtotal").textContent = `$${subtotal.toFixed(2)}`;
             document.getElementById("total").textContent = `$${(subtotal + shipping).toFixed(2)}`;
         }
+        async function convertUSDToVND(amountUSD) {
+            const resp = await fetch(`https://api.exchangerate.host/convert?from=USD&to=VND&amount=${amountUSD}&access_key=52559fa015a6589465fc11664494c52e`);
+            const data = await resp.json();
 
+            return amountUSD * data.info.quote;
+        }
+        const totalText = document.getElementById("total").textContent;
+        const usdPrice = parseInt(totalText.replace(/[^0-9.-]+/g, ""));
+        let vndPrice = 0;
+        convertUSDToVND(usdPrice).then(vnd => {
+            vndPrice = vnd.toFixed(0);
+        }).catch(err => {
+            console.error("Error converting currency:", err);
+        });
         // Place order
         const placeOrderBtn = document.getElementById('place-order-btn');
         placeOrderBtn.addEventListener('click', function () {
@@ -258,7 +271,7 @@
                 let html = `<h2>Thanh Toán Chuyển Khoản</h2>
             <p>Vui lòng sử dụng mã QR bên dưới để hoàn tất thanh toán cho đơn hàng của bạn</p>
             <p>Sau Khi Thanh Toán Hãy Nhấn Vào Nút Xác Nhận, Không Được Tắt</p>
-    <img src="https://qr.sepay.vn/img?acc=VQRQAFEYF2204&bank=MBBank&amount=${totalPrice}&des=${userID}">
+    <img src="https://qr.sepay.vn/img?acc=VQRQAFEYF2204&bank=MBBank&amount=${vndPrice}&des=${userID}">
     <button class="confirm-payment btn btn-primary">Xác Nhận Thanh Toán</button>
     <br><br>`;
                 getModalContent.innerHTML = html + `<button class="btn btn-close" onclick="closeModal()">Đóng</button>`;
