messenger-icon-update

--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -18,6 +18,12 @@
     <!-- Main Content - Homepage -->
     <main>
         <%- body %>
+            <div class="messenger-wrapper">
+                <div class="messenger-bubble">💬 Chat với chúng tôi!</div>
+                <a href="https://m.me/100034747056358" target="_blank" class="messenger-float">
+                    <img src="/asset/images/messenger-icon.png" alt="Messenger" />
+                </a>
+            </div>
     </main>
 
     <!-- Footer -->
