login-update-avater

--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -7,6 +7,9 @@
     <title>QA Tech - E-Commerce Store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/asset/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/421731154_1127436635091228_3238647821415035089_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGCMXM8tAUO6XdV6HhjlpepbgBnhDTaQ4huAGeENNpDiAEI30jKIbvPB_T93IFl8jd-dn0HHj0-sBeQErlCS0rI&_nc_ohc=nurBMS_mZWgQ7kNvwHqNhwm&_nc_oc=AdkgkpxsfEPYnKusyQ8Z0V3WW1DpWdBz8Pk8N04PNcKXBBHPViH6i7r0PrDrENy8uP3qWWv9LrP5iaC7C4Jermbq&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=Ymgqb1tk4Low6ogG1yC0IA&oh=00_AfiokDprF3ns_u-JUBgzBlv_P7ZEGHep1h3yXi4Myy9oFw&oe=6919C724">
+
 </head>
 
 <body>
